cleanup [platform]: minor optimization; deprecated API; quick fixes; typos; formatting
GitOrigin-RevId: 5f9815cb52f7bf8de469cca3c02792ee019ee378