@@ -11,25 +11,22 @@ import org.jetbrains.annotations.SystemIndependent;
 
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Set;
 import java.util.function.Consumer;
 
 import static java.util.Collections.singleton;
 
-/**
- * <p>An implementation of {@link VirtualFileSystem} interface dealing with local files (here, "local" means
- * "accessible via local file operations", files themselves could be located on a mounted network drive).</p>
- *
- * <p>Instances of {@link VirtualFile} belonging to LocalFileSystem are backed by
- * {@link com.intellij.openapi.vfs.newvfs.persistent.PersistentFS PersistentFS} - meaning they represent not an actual state of files,
- * rather a snapshot thereof.</p>
- */
+/// An implementation of [VirtualFileSystem] interface dealing with local files (here, "local" means
+/// "accessible via local file operations", files themselves could be located on a mounted network drive).
+///
+/// Instances of [VirtualFile] belonging to LocalFileSystem are backed by
+/// [`PersistentFS`][com.intellij.openapi.vfs.newvfs.persistent.PersistentFS] - meaning they represent not an actual state of files,
+/// rather a snapshot thereof.
 public abstract class LocalFileSystem extends NewVirtualFileSystem {
   public static final String PROTOCOL = StandardFileSystems.FILE_PROTOCOL;
   public static final String PROTOCOL_PREFIX = StandardFileSystems.FILE_PROTOCOL_PREFIX;
 
-  /** NB: verify with {@link com.intellij.util.io.TrashBin#canMoveToTrash(VirtualFile)} before setting */
+  /// **NB:** verify with [com.intellij.util.io.TrashBin#canMoveToTrash(VirtualFile)] before setting
   @ApiStatus.Internal
   public static final Key<Boolean> MOVE_TO_TRASH = Key.create("vfs.local.move-to-trash");
 
@@ -47,14 +44,14 @@ public abstract class LocalFileSystem extends NewVirtualFileSystem {
     return instance;
   }
 
-  /** Prefer {@link #findFileByNioFile(Path)}. */
+  /// Prefer [#findFileByNioFile(Path)].
   @ApiStatus.Obsolete
   @SuppressWarnings({"IO_FILE_USAGE", "UnnecessaryFullyQualifiedName"})
   public @Nullable VirtualFile findFileByIoFile(@NotNull java.io.File file) {
     return findFileByPath(file.getAbsolutePath());
   }
 
-  /** Prefer {@link #refreshAndFindFileByNioFile(Path)}. */
+  /// Prefer [#refreshAndFindFileByNioFile(Path)].
   @ApiStatus.Obsolete
   @SuppressWarnings({"IO_FILE_USAGE", "UnnecessaryFullyQualifiedName"})
   public @Nullable VirtualFile refreshAndFindFileByIoFile(@NotNull java.io.File file) {
@@ -72,37 +69,31 @@ public abstract class LocalFileSystem extends NewVirtualFileSystem {
     return refreshAndFindFileByPath(file.toAbsolutePath().toString());
   }
 
-  /** Prefer {@link #refreshNioFiles(Iterable)} */
+  /// Prefer [#refreshNioFiles(Iterable)]
   @ApiStatus.Obsolete
   @SuppressWarnings({"IO_FILE_USAGE", "UnnecessaryFullyQualifiedName"})
   public void refreshIoFiles(@NotNull Iterable<? extends java.io.File> files) {
     refreshIoFiles(files, false, false, null);
   }
 
-  /**
-   * See {@link #refreshNioFiles(Iterable, boolean, boolean, Runnable)}.
-   */
+  /// See [#refreshNioFiles(Iterable, boolean, boolean, Runnable)].
   public final void refreshNioFiles(@NotNull Iterable<? extends Path> files) {
     refreshNioFiles(files, false, false, null);
   }
 
-  /** Prefer {@link #refreshNioFiles(Iterable, boolean, boolean, Runnable)} */
+  /// Prefer [#refreshNioFiles(Iterable, boolean, boolean, Runnable)]
   @ApiStatus.Obsolete
   @SuppressWarnings({"IO_FILE_USAGE", "UnnecessaryFullyQualifiedName"})
   public void refreshIoFiles(@NotNull Iterable<? extends java.io.File> files, boolean async, boolean recursive, @Nullable Runnable onFinish) {
     refreshNioFiles(ContainerUtil.map(files, java.io.File::toPath), async, recursive, onFinish);
   }
 
-  /**
-   * Performs the refresh of the specified files based on filesystem events that have already been received.
-   * To perform refresh reliably for file operations that have just finished (so that related events might not have been generated),
-   * use {@link VfsUtil#markDirtyAndRefresh} instead.
-   */
+  /// Performs the refresh of the specified files based on filesystem events that have already been received.
+  /// To perform refresh reliably for file operations that have just finished (so that related events might not have been generated),
+  /// use [VfsUtil#markDirtyAndRefresh] instead.
   public abstract void refreshNioFiles(@NotNull Iterable<? extends Path> files, boolean async, boolean recursive, @Nullable Runnable onFinish);
 
-  /**
-   * Performs a non-recursive synchronous refresh of specified files.
-   */
+  /// Performs a non-recursive synchronous refresh of specified files.
   public void refreshFiles(@NotNull Iterable<? extends VirtualFile> files) {
     refreshFiles(files, false, false, null);
   }
@@ -120,19 +111,17 @@ public abstract class LocalFileSystem extends NewVirtualFileSystem {
     return result.size() == 1 ? result.iterator().next() : null;
   }
 
-  /**
-   * Starts watching a given set of roots. Please note that it's a client's responsibility to make sure that
-   * files and directories the client is interested in are loaded into VFS.
-   */
+  /// Starts watching a given set of roots. Please note that it's a client's responsibility to make sure that
+  /// files and directories the client is interested in are loaded into VFS.
   public @NotNull Set<WatchRequest> addRootsToWatch(@NotNull Collection<String> rootPaths, boolean watchRecursively) {
     if (rootPaths.isEmpty()) {
-      return Collections.emptySet();
+      return Set.of();
     }
     else if (watchRecursively) {
-      return replaceWatchedRoots(Collections.emptySet(), rootPaths, null);
+      return replaceWatchedRoots(Set.of(), rootPaths, null);
     }
     else {
-      return replaceWatchedRoots(Collections.emptySet(), null, rootPaths);
+      return replaceWatchedRoots(Set.of(), null, rootPaths);
     }
   }
 
@@ -153,25 +142,19 @@ public abstract class LocalFileSystem extends NewVirtualFileSystem {
     return result.size() == 1 ? result.iterator().next() : null;
   }
 
-  /**
-   * Stops watching given watch requests and starts watching new paths.
-   * May do nothing and return the same set of requests when it contains exactly the same paths.
-   */
+  /// Stops watching given watch requests and starts watching new paths.
+  /// May do nothing and return the same set of requests when it contains exactly the same paths.
   public abstract @NotNull Set<WatchRequest> replaceWatchedRoots(
     @NotNull Collection<WatchRequest> watchRequests,
     @Nullable Collection<String> recursiveRoots,
     @Nullable Collection<String> flatRoots
   );
 
-  /**
-   * Registers a handler that allows a version control system plugin to intercept file operations in the local file system
-   * and to perform them through the VCS tool.
-   */
+  /// Registers a handler that allows a version control system plugin to intercept file operations in the local file system
+  /// and to perform them through the VCS tool.
   public abstract void registerAuxiliaryFileOperationsHandler(@NotNull LocalFileOperationsHandler handler);
 
-  /**
-   * Unregisters a handler that allows a version control system plugin to intercept file operations in the local file system
-   * and to perform them through the VCS tool.
-   */
+  /// Unregisters a handler that allows a version control system plugin to intercept file operations in the local file system
+  /// and to perform them through the VCS tool.
   public abstract void unregisterAuxiliaryFileOperationsHandler(@NotNull LocalFileOperationsHandler handler);
 }
